# pysvt

./: .coverage  .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-publish.yml  lint-sort-format.yml
examples/: __main__.py  dict.py  dict_cls.py  errors.py  file.py  file_cls.py  input.toml  input1.toml  input2.toml  input3.toml  inspect_locals.py  live.py  pre_postprocess.py  recursion.py  stdout.py
examples/data/: data.toml  data_cases.toml  prepostprocess.toml
pysut/: __init__.py  __main__.py  utils.py
pysut/utils/: ctx.py  models.py  printer.py
pysvt/: __init__.py  __main__.py
pysvt/utils/: models.py  printer.py  validation.py
tests/: __init__.py  input.toml  test_cls.py  test_func.py
tests/data/: cases.toml  func_incorrect.toml  input.toml
