[tool.poetry]
name = "pysut"
version = "0.1.0"
description = "A simple test case runner in Python that uses TOML configurations and decorator syntax."
authors = ["dhzdhd"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.metadata]
Homepage = "https://github.com/dhzdhd/pysut"
Issues = "https://github.com/dhzdhd/pysut/issues"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.2"

[tool.taskipy.tasks]
example = "python examples/__main__.py"
format = "black --check ."
lint = "flake8 ."
sort = "isort ."
sortc = "isort -c ."
test = "python -m unittest tests"
publish = "poetry build; poetry publish"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
