[tool.poetry]
name = "pysut"
version = "0.1.0"
description = "A simple test case runner in Python that uses TOML configurations and decorator syntax."
authors = ["dhzdhd <dhzdhd@proton.me>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "LICENSE"

[tool.hatch.metadata]
Homepage = "https://github.com/dhzdhd/pysut"
Repository = "https://github.com/dhzdhd/pysut.git"
Issues = "https://github.com/dhzdhd/pysut/issues"
# Changelog = "https://github.com/dhzdhd/pysut/blob/master/CHANGELOG.md"
# Documentation = ""

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"
pyright = "^1.1.342"
pytest-cov = "^4.1.0"

[tool.taskipy.tasks]
example = "python examples/__main__.py"
format = "black --check ."
lint = "flake8 ."
sort = "isort ."
sortc = "isort -c ."
test = "pytest tests"
type = "pyright "
cov = "pytest --cov=tests/"
publish = "poetry build; poetry publish"

[tool.pyright]
include = ["pysut", "examples"]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Windows"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
